# Federated-Learning-on-Non-IID-Data-Differential-Privacy

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  Makefile  PROJECT_STATUS_REPORT.md  README.md  docker-compose.yml  main.py  plan.md  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yml  milestone1-foundation.yml
cpp/: CMakeLists.txt
cpp/benchmarks/: aggregation_benchmark.cpp
cpp/coordinator/: main.cpp
cpp/coordinator/include/fl_coordinator/: coordinator_config.hpp  coordinator_service.hpp  event_bus.hpp  round_manager.hpp  run_manager.hpp  scaffold_client_state.hpp  structured_log.hpp  task_dispatcher.hpp  worker_registry.hpp
cpp/coordinator/src/: coordinator_service.cpp  event_bus.cpp  round_manager.cpp  run_manager.cpp  scaffold_client_state.cpp  structured_log.cpp  task_dispatcher.cpp  worker_registry.cpp
cpp/coordinator/tests/: event_bus_test.cpp  recovery_test.cpp  run_manager_test.cpp  scaffold_client_state_test.cpp  task_dispatcher_test.cpp  test_main.cpp  test_support.hpp  worker_registry_test.cpp
cpp/coordinator/tools/: coordinator_cli.cpp
cpp/core/include/fl_core/: aggregation.hpp  build_info.hpp  checkpoint.hpp  coordinator.hpp  tensor.hpp
cpp/core/src/: aggregation.cpp  build_info.cpp  checkpoint.cpp  coordinator.cpp  tensor.cpp
cpp/core/tests/: checkpoint.cpp  golden.cpp  smoke.cpp  validation.cpp
cpp/core/tools/: aggregate_cli.cpp
data/: __init__.py  partitioner.py
docs/: benchmarking.md  checkpoint-format.md  coordinator-recovery.md  coordinator-runtime.md  cpp-aggregation-architecture.md  current-architecture.md  current-system-audit.md  deployment-foundation.md  docker-runtime.md  event-streaming.md  fedopt.md  go-coordinator-integration.md  grpc-contracts.md  known-limitations.md  migration-strategy.md  milestone-1-validation.md  milestone-2-report.md  milestone-3-architecture.md  milestone-3-report.md  milestone-3-validation.md  privacy-audit.md  protobuf-generation.md  python-worker.md  risk-register.md  scaffold-client-state.md  scaffold-state.md  task-leasing.md  tensor-format.md  testing.md  update-validation.md  worker-lifecycle.md
federated/: dp_accountant.py  server.py
go/: go.mod
go/cmd/api/: main.go
go/internal/application/: coordinator_service.go  services.go  services_test.go
go/internal/auth/: auth.go  repository.go
go/internal/bootstrap/: persistence.go  persistence_test.go
go/internal/coordinator/: client.go  errors.go  grpc_client.go  mapper.go  mapper_test.go  mock_client.go  mock_client_test.go
go/internal/experiments/: experiment.go  repository.go
go/internal/observability/: audit.go  repository.go  telemetry.go  telemetry_test.go
go/internal/projects/: project.go  repository.go
go/internal/runs/: repository.go  run.go
go/internal/storage/: jsonfile.go
infra/compose/: docker-compose.dev.yml
infra/docker/: cpp-coordinator.Dockerfile  go-api.Dockerfile  python-worker.Dockerfile  web.Dockerfile
infra/kubernetes/: api-deployment.yaml  configmap.yaml  namespace.yaml  python-worker-deployment.yaml  stateful-services.yaml  web-deployment.yaml
infra/mlflow/: Dockerfile
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
legacy/python-research-studio/: config.yaml  main.py
legacy/python-research-studio/federated/: __init__.py  client.py
legacy/python-research-studio/models/: networks.py
models/: __init__.py
proto/common/: artifact.proto
proto/coordinator/: coordinator.proto
proto/events/: events.proto
proto/experiment/: experiment.proto
proto/metrics/: metrics.proto
proto/privacy/: privacy.proto
proto/worker/: worker.proto
python/: pyproject.toml
python/src/fl_platform/: __init__.py
python/src/fl_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/fl_platform/algorithms/: __init__.py  ditto.py  fedsam.py  per_fedavg.py
python/src/fl_platform/compat/: __init__.py  cpp_bridge.py
python/src/fl_platform/datasets/: __init__.py  registry.py
python/src/fl_platform/execution/: __init__.py  modes.py  multiprocessing_orchestrator.py
python/src/fl_platform/flower/: __init__.py  adapter.py
python/src/fl_platform/models/: __init__.py  registry.py
python/src/fl_platform/personalization/: __init__.py  metrics.py
python/src/fl_platform/privacy/: __init__.py  adaptive_clipping.py  config.py  ledger.py
python/src/fl_platform/ray/: __init__.py  adapter.py
python/src/fl_platform/rpc/: __init__.py
python/src/fl_platform/security/: __init__.py  audit.py  envelope.py  nonce.py  secure_aggregation.py
python/src/fl_platform/tracking/: __init__.py  identity.py  mlflow.py
python/src/fl_platform/worker/: __init__.py  __main__.py  cancellation.py  configuration.py  coordinator_client.py  dataset_loader.py  service.py  task_runner.py  tensor_codec.py
python/src/fl_platform/workers/: __init__.py  service.py
python/tests/: test_execution_foundations.py  test_milestone4_foundations.py  test_package.py  test_privacy_foundations.py  test_security_foundations.py  test_tracking_foundations.py  test_worker_service.py
scripts/: generate_protos.ps1  generate_protos.sh  verify_proto_contracts.py
tests/: test_coordinator_worker_integration.py  test_cpp_golden_parity.py  test_legacy_baselines.py  test_python_cpp_compat.py
tests/baseline/: test_coordinator_worker_integration.py  test_cpp_golden_parity.py  test_legacy_baselines.py  test_python_cpp_compat.py
utils/: __init__.py  logger.py  metrics.py
web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/audit/: page.tsx
web/app/login/: page.tsx
web/components/: app-shell.tsx  metric-card.tsx  status-pill.tsx
web/features/audit/: audit-console.tsx
web/features/auth/: login-console.tsx
web/features/builder/: experiment-builder.tsx
web/features/overview/: overview-page.tsx
web/features/runs/: run-dashboard.tsx  (+2 more)
web/lib/: api.ts  coordinator-events.ts  demo-data.ts
web/tests/: api.test.ts  metric-card.test.tsx
web/types/: api.ts
(+6 files in other folders)
