[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-platform"
version = "0.1.0"
description = "Milestone 1 Python foundation for the federated learning super system"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = [
    "src/fl_platform.egg-info",
]
