[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-platform"
version = "0.1.0"
description = "Milestone 1 Python foundation for the federated learning super system"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = [
    "src/fl_platform.egg-info",
    # Regenerated on demand by `make proto` (see docs/protobuf-generation.md),
    # never committed, and not hand-written — excluded from strict checking
    # for the same reason egg-info is.
    "src/fl_platform/generated",
]

# fl_platform.worker.task_runner intentionally reuses the legacy prototype's
# proven training implementation (federated.client) rather than
# reimplementing it (see docs/python-worker.md). That package predates this
# strict mypy config and is out of this milestone's scope to retrofit;
# `follow_imports = "skip"` stops mypy from strict-checking it as a side
# effect of one import, without silencing real issues in python/src itself.
[[tool.mypy.overrides]]
module = ["federated", "federated.*", "models", "models.*", "data", "data.*", "utils", "utils.*"]
follow_imports = "skip"

# grpcio's generated _grpc.py modules import `grpc` directly; type stubs for
# grpc/protobuf are not part of this milestone's dev dependencies (only the
# runtime packages are — see docs/grpc-contracts.md), so these two specific
# untyped-import categories are ignored rather than adding a stub dependency
# whose only purpose would be silencing this.
[[tool.mypy.overrides]]
module = ["grpc.*", "google.protobuf.*"]
ignore_missing_imports = true
